--- a/1. ES-6.md
+++ b/1. ES-6.md
@@ -17,3 +17,28 @@ ES2015 and ES6, are both terminologies are referring to the same 6th edition of 
 - creation of Classes
 - parameters with default values,
 - promises for asynchronous actions,
+
+
+## Popularity of JavaScript
+
+JavaScript became a hit because it turned web browsers into application platforms. Here’s how:
+
+- JavaScript can be used in both the front-end and back-end of web development.
+- JavaScript is standardized so it’s frequently updated with new versions.
+- JavaScript integrates easily with HTML and CSS.
+- JavaScript allows websites to have interactivity like scroll transitions and object movement. Modern browsers still compete to process JavaScript the fastest for the best user experiences. Chrome, the most used Internet browser in 2017, has been so successful because of its ability to process JavaScript quickly.
+- JavaScript offers a wide range of frameworks and libraries that help developers create complex applications with low overhead. Programmers can import libraries and frameworks in their code to augment their application’s functionality.
+
+## JavaScript for Servers
+
+In the early 2000s, big platforms like Facebook and Google began using JavaScript in their back-end server logic to process and respond to front-end requests. JavaScript helped businesses scale since engineers who knew JavaScript could apply those skills in a back-end context.
+
+JavaScript used for servers, also known as server-side JavaScript, gained popularity because it allowed for scalability. In the server, JavaScript can be integrated with other languages to communicate with databases.
+
+Node.JS, or Node, is one of the most popular versions of server-side JavaScript. Node has been used to write large platforms for NASA, eBay and many others. Since Javascript can execute programs out of sequential order, Node can be used to create scalable web applications, messaging platforms, and multiplayer games. This is why Google Cloud and Amazon Web Service depend on Node for some of their services.
+
+## What Else Can JavaScript Do?
+
+Beyond the web, JavaScript has a large presence amongst cross-platform applications. We use some popular standalone desktop apps like Slack, GitHub, Skype, and Tidal. These applications are developed with the JavaScript framework called Electron.js. Electron is excellent for making desktop applications that need to work across different devices regardless of operating system.
+
+In addition, JavaScript has the potential of expanding into other innovative technologies such as virtual reality and gaming. JavaScript can be used for animating, rendering and scaling. JavaScript even has contributed to the internet of things, the technology that makes simple objects, like your fridge, smarter. Everyday devices can become interactive and collect data using JavaScript libraries.
