Update and rename 4. Intro to 4. Intro.md

--- a/4. Intro.md
+++ b/4. Intro.md
@@ -9,6 +9,17 @@ JavaScript has several built-in arithmetic operators, that allow us to perform m
 - Divide: /
 - Remainder: %
 
+
+## Mathematical Assignment Operators
+
+- +=
+- -=
+- *=
+- /=
+
+- ++ (ncrement operator)
+- -- (decrement operator)
+
 ## String Concatenation
 
 Operators aren’t just for numbers! When a + operator is used on two strings, it appends the right string to the left string:
@@ -18,6 +29,25 @@ console.log('hi' + 'ya'); // Prints 'hiya'
 ```
 
 This process of appending one string to another is called concatenation.
+
+
+## String Concatenation with Variables
+
+```
+let myPet = 'armadillo';
+console.log('I own a pet ' + myPet + '.'); 
+// Output: 'I own a pet armadillo.'
+```
+
+## String Interpolation
+
+In the ES6 version of JavaScript, we can insert, or interpolate, variables into strings using template literals. 
+
+Notice that:
+
+- A template literal is wrapped by backticks ``.
+- Inside the template literal, you’ll see a placeholder, ${myPet}. The value of myPet is inserted into the template literal.
+- When we interpolate `I own a pet ${myPet}.`, the output we print is the string: 'I own a pet armadillo.'
 
 ## Properties
 
