--- a/5. Variable.md
+++ b/5. Variable.md
@@ -31,3 +31,19 @@ console.log(price); // Output: undefined
 const variable cannot be reassigned because it is constant. 
 If you try to reassign a const variable, you’ll get a TypeError.
 Constant variables must be assigned a value when declared. If you try to declare a const variable without a value, you’ll get a SyntaxError.
+
+---
+
+## typeof operator
+
+While writing code, it can be useful to keep track of the data types of the variables in your program. If you need to check the data type of a variable’s value, you can use the typeof operator.
+
+The typeof operator checks the value to its right and returns, or passes back, a string of the data type.
+
+```
+const unknown1 = 'foo';
+console.log(typeof unknown1); // Output: string
+ 
+const unknown2 = 10;
+console.log(typeof unknown2); // Output: number
+```
