--- a/9. array.md
+++ b/9. array.md
@@ -18,6 +18,15 @@ Each element in an array has a numbered position known as its index. We can acce
 
 Arrays in JavaScript are zero-indexed, meaning the positions start counting from 0 rather than 1. Therefore, the first item in an array will be at position 0. 
 
+Attempting to access an unwritten index will lead to 'undefined'
+
+```
+const cities = ['Chicago', 'San Fransisco', 'New York'];
+ 
+console.log(cities[3]);
+//Output: undefined
+```
+
 You can also access individual characters in a string using bracket notation and the index. For instance, you can write:
 
 ```
@@ -43,6 +52,22 @@ console.log(seasons);
 Variables declared with let can be reassigned.
 
 Variables declared with the const keyword cannot be reassigned. However, elements in an array declared with const remain mutable. Meaning that we can change the contents of a const array, but cannot reassign a new array or a different value.
+
+
+```
+const countries = ['Japan', 'Denmark', 'Mexico', 'Morocco'];
+countries.shift();
+console.log(countries); 
+countries =  ['England', 'Mozambique', 'Cambodia', 'Peru']; 
+console.log(countries); 
+```
+Will produce ...
+
+```
+['Japan', 'Denmark', 'Mexico', 'Morocco']
+TypeError: Assignment to a contant variable
+```
+
 
 ## Properties
 
