--- a/10. Loops.md
+++ b/10. Loops.md
@@ -102,3 +102,61 @@ for (let i = 0; i < 99; i++) {
  
 console.log('Orange you glad I broke out the loop!');
 ```
+
+## for loop vs for…of loop
+Here is an example of iterating over each element in an array using a traditional for loop with an index variable:
+
+```
+const hobbies = ['singing', 'eating', 'quidditch', 'writing'];
+ 
+for (let i = 0; i < hobbies.length; i++) {
+  console.log(`I enjoy ${hobbies[i]}.`);
+}
+```
+And here is an example of iterating through the same array using a for...of loop:
+
+```
+const hobbies = ['singing', 'eating', 'quidditch', 'writing'];
+ 
+for (const hobby of hobbies) {
+  console.log(`I enjoy ${hobby}.`);
+}
+```
+Both examples print out the same thing:
+
+```
+I enjoy singing.
+I enjoy eating.
+I enjoy quidditch.
+I enjoy writing.
+```
+One of the primary uses of the for...of loop is iterating through the items of an array.
+The for...of can also be used to iterate over strings. 
+
+## Break and Continue
+for...of has the advantage of setting up most of your loop parameters for you, but sometimes it is necessary to reclaim some control of how iteration is managed. One way of doing this is using JavaScript’s break and continue statements.
+
+The break statement can be used to jump out of a loop. For example:
+
+```
+const strangeBirds = ['Shoebill', 'Cockatrice', 'Basan', 'Terrorbird','Parotia','Kakapo'];
+ 
+for (const bird of strangeBirds) {
+  if (bird === 'Basan'){ 
+    break; 
+  }
+  console.log(bird);
+}
+```
+The continue statement is used to skip one iteration of the loop. For example:
+
+```
+const strangeBirds = ['Shoebill', 'Cockatrice', 'Basan', 'Cow', 'Terrorbird', 'Parotia', 'Kakapo'];
+ 
+for (const bird of strangeBirds) {
+  if  (bird === 'Cow'){
+    continue;
+  }
+  console.log(bird);
+}
+```
