Update 12. Advanced Objects.md

--- a/12. Advanced Objects.md
+++ b/12. Advanced Objects.md
@@ -132,3 +132,118 @@ Like getter methods, there are similar advantages to using setter methods that i
 person._age = 'forty-five'
 console.log(person._age); // Prints forty-five
 ```
+
+## Factory Functions
+
+```const monsterFactory = (name, age, energySource, catchPhrase) => {
+  return { 
+    name: name,
+    age: age, 
+    energySource: energySource,
+    scare() {
+      console.log(catchPhrase);
+    } 
+  }
+};
+```
+In the monsterFactory function above, it has four parameters and returns an object that has the properties: name, age, energySource, and scare(). To make an object that represents a specific monster like a ghost, we can call monsterFactory with the necessary arguments and assign the return value to a variable:
+
+```
+const ghost = monsterFactory('Ghouly', 251, 'ectoplasm', 'BOO!');
+ghost.scare(); // 'BOO!'
+```
+With monsterFactory in place, we don’t have to create an object literal every time we need a new monster. Instead, we can invoke the monsterFactory function with the necessary arguments.
+
+## Property Value Shorthand
+
+ES6 introduced some new shortcuts for assigning properties to variables known as destructuring.
+
+we can use a destructuring technique, called property value shorthand, to save ourselves some keystrokes. The example below works exactly like the example above:
+
+```
+const monsterFactory = (name, age) => {
+  return { 
+    name,
+    age 
+  }
+};
+```
+
+## Destructured Assignment
+
+If we wanted to extract the residence property as a variable, we could using the following code:
+
+```
+const residence = vampire.residence; 
+console.log(residence); // Prints 'Transylvania' 
+```
+However, we can also take advantage of a destructuring technique called destructured assignment to save ourselves some keystrokes. In destructured assignment we create a variable with the name of an object’s key that is wrapped in curly braces { } and assign to it the object. Take a look at the example below:
+
+```
+const { residence } = vampire; 
+console.log(residence); // Prints 'Transylvania'
+```
+
+## Built-in Object Methods
+
+### Object.keys(object)
+
+The Object.keys() method returns an array of a given object's own enumerable property names, iterated in the same order that a normal loop would.
+
+```
+const robotKeys = Object.keys(robot);
+
+console.log(robotKeys);
+//Output: [ 'model', 'mobile', 'sentient', 'armor', 'energyLevel' ]
+```
+
+### Object.entries(object)
+
+The Object.entries() method returns an array of a given object's own enumerable string-keyed property [key, value] pairs, in the same order as that provided by a for...in loop. (The only important difference is that a for...in loop enumerates properties in the prototype chain as well). 
+
+The order of the array returned by Object.entries() does not depend on how an object is defined. If there is a need for certain ordering, then the array should be sorted first, like Object.entries(obj).sort((a, b) => b[0].localeCompare(a[0]));.
+
+```
+const robotEntries = Object.entries(robot)
+console.log(robotEntries);
+
+//Output: [ [ 'model', 'SAL-1000' ],
+  [ 'mobile', true ],
+  [ 'sentient', false ],
+  [ 'armor', 'Steel-plated' ],
+  [ 'energyLevel', 75 ] ]
+```
+
+### Object.assign(target, source)
+
+The Object.assign() method copies all enumerable own properties from one or more source objects to a target object. It returns the target object.
+
+```
+const target = { a: 1, b: 2 };
+const source = { b: 4, c: 5 };
+
+const returnedTarget = Object.assign(target, source);
+
+console.log(target);
+// expected output: Object { a: 1, b: 4, c: 5 }
+
+console.log(returnedTarget);
+// expected output: Object { a: 1, b: 4, c: 5 }
+```
+<b> The target will be changed </b>
+
+To make a copy, as to not modify the original target
+
+```
+let robotCopy = Object.assign({}, robot)
+const newRobot = Object.assign(robotCopy, {laserBlaster: true, voiceRecognition: true} )
+console.log(newRobot);
+
+//Output: { model: 'SAL-1000',
+  mobile: true,
+  sentient: false,
+  armor: 'Steel-plated',
+  energyLevel: 75,
+  laserBlaster: true,
+  voiceRecognition: true }
+```
