Update 12. Advanced Objects.md

--- a/12. Advanced Objects.md
+++ b/12. Advanced Objects.md
@@ -103,6 +103,8 @@ Now that we’ve gone over syntax, let’s discuss some notable advantages of us
 - In a getter, we can access the properties of the calling object using this.
 - The functionality of our code is easier for other developers to understand.
 
+<b>person.fullName() // because we wrote a getter, this line is looking for a regular method called .fullName() and would cause an error </b>
+
 Another thing to keep in mind when using getter (and setter) methods is that properties cannot share the same name as the getter/setter function. 
 
 ## Setters
