--- a/15. Node.md
+++ b/15. Node.md
@@ -1,10 +1,11 @@
-Javascript has existed since 1995 and has since taken over as the dominant language for web development. For much of its life, JavaScript was used mainly for client-side scripting inside <script> tags executing in web browsers. This limitation meant that developers were often working in many different languages and frameworks between the front-end (client-side) and backend (server-side) aspects of a web application.
+Javascript has existed since 1995 and has since taken over as the dominant language for web development. For much of its life, JavaScript was used mainly for client-side scripting inside <script></script> tags executing in web browsers. This limitation meant that developers were often working in many different languages and frameworks between the front-end (client-side) and backend (server-side) aspects of a web application.
 
 Although there were other projects to bring JavaScript to server-side applications, the functionality took off with the launch of Node.js in 2009. Node allows developers to write JavaScript code that runs directly in a computer process itself instead of in a browser. Node can, therefore, be used to write server-side applications with access to the operating system, file system, and everything else required to build fully-functional applications.
 
 Node.js is written in C, C++, and JavaScript, and it is built on the open-source V8 JavaScript engine which also powers JS in browsers such as Google Chrome. As V8 supports new features in JavaScript, they are incorporated into Node.
 
 ## Node-Specific Functionality
+
 ### Globals
   
 Node provides access to several important global objects for use with Node program files. When writing a file that will run in a Node environment, these variables will be accessible in the global scope of your file.
@@ -18,8 +19,39 @@ Node provides access to several important global objects for use with Node progr
   
 Node has a many built-in modules to aid in interactions with the command line, the computer file system, and the Internet. These include
 
-HTTP and HTTPS for creating web servers.
-File System, OS, and Path for interacting with the file system, operating system, and file/directory paths.
-
+- HTTP and HTTPS for creating web servers.
+- File System, OS, and Path for interacting with the file system, operating system, and file/directory paths.
   
+  
+## Why Node?
+  
+Per the Node.js homepage, Node “uses an event-driven, non-blocking I/O model.” In practice, this means that Node is built well to handle asynchronous JavaScript code to perform many asynchronous activities such as reading and writing to the file system, handling connections to database servers, or handling requests as a web server.
+
+To handle asynchronous code, Node uses a callback-based system. Node functions and methods that will implement some asynchronous activity take a callback function. This callback will be called whenever the asynchronous operation has resolved. By convention, the first argument of this callback is an error placeholder. If an error occurred in the asynchronous operation occurred (trying to read a non-existent file, for example), the error argument will be an Error object, but it will be null if no error occurs.
+
+```
+const fs = require('fs');
+ 
+fs.readFile('./script.js', function(error, data) {
+  // error is null if no error occurred, but an Error object if it did
+  if (error) {
+   throw error;
+  }
+  // the file data will be passed into the callback if no error was thrown
+  console.log(data);
+});
+```
+
+In this example, we are using Node’s built-in fs module to read a script.js file. The callback function is called after the file-reading operation is completed. If an error occurred, it will be passed in as error and thrown. If it doesn’t exist, the retrieved data from the file reading operation is logged to the console.
+
+
+## Package Management
+
+Node packages are a convenient way to share modules between Node developers. The service npm is the default package manager for Node, and it ships with an installation of Node.
+
+npm allows access to the hundreds of thousands of open-source packages available.
+
+In addition to npm, yarn is gaining popularity as another JS package manager.
+
+
   
